--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ highlighter:         pygments
 
 # Permalinks
 permalink:           /:title
-relative_permalinks: true
+relative_permalinks: false
 
 # Setup
 timezone:            Europe/Paris # eg. Asia/Kathmandu
