--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 permalink   : /:title/
 markdown    : kramdown
-highlighter : pygments
+highlighter : rouge
 
 gems: [jekyll-paginate]
 paginate: 2 #6
