remove pygments require, add my name to LICENCE and change perso info in config, 404. Remove download jekyll theme link from index

--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,12 @@
 {
-  "name": "nandomoreira.me",
+  "name": "by0ute.github.com",
   "version": "1.0.0",
-  "homepage": "https://github.com/nandomoreirame/nandomoreirame.github.io",
+  "homepage": "https://github.com/By0ute/by0ute.github.io",
   "private": true,
   "license": "MIT",
   "authors": [
     "Fernando Moreira <nandomoreira.me@gmail.com>"
+    "Caroline Beyne <caroline.beyne@gmail.com>"
   ],
   "dependencies": {
     "classie": "~1.0.1",
