some config layouting front page + info

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ disqus_shortname: "byouteio"
 rss_path: source/
 author:
   name      : Caroline Beyne
-  image     : /assets/images/author.jpg
+  image     : /assets/images/pixellou.jpg
   email     : caroline.beyne@gmail.com
   url       : http://carolinebeyne.com
   # facebook  : http://facebook.com/fernando.dev
