change email contact timail@byoute.io

--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ rss_path: source/
 author:
   name      : Caroline Beyne
   image     : /assets/images/pixellou.jpg
-  email     : caroline.beyne@gmail.com
+  email     : mail@byoute.io
   url       : http://carolinebeyne.com
   twitter   : http://twitter.com/CaroByoute
   github    : http://github.com/By0ute
