--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ repo: https://github.com/By0ute/by0ute.github.io
 disqus_shortname: byouteio
 rss_path: source/
 author:
-  name      : Caroline Beyne
+  name      : Byoute
   image     : /assets/images/pixellou.jpg
   email     : mail@byoute.io
   url       : http://carolinebeyne.com
