config for byoute.io

--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ title: ++ By0ute.io ++
 description: "Software dev + TD life + post-prod code"
 meta_description: "Software Developer, TD, Technical Director, Post production code"
 meta_keywords: "site, website, code, c++, python, mel, td, post prod, cg, studio"
-url: http://by0ute.github.com
-production_url: http://by0ute.github.com
+url: http://byoute.io
+production_url: http://byoute.io
 repo: https://github.com/By0ute/by0ute.github.io
 disqus_shortname: byouteio
 rss_path: source/
